--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button id="login" class="btn btn-success">Enter</button>
         </div>
     </div>
+
     <div id="transaction-area">
         <div class="row">
             <div class="col-md-4">
@@ -28,7 +29,7 @@
             <div class="col-md-4">
                 <div class="withdraw status"> 
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$<span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -38,7 +39,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-6">
                 <div class="submit-area"> 
@@ -71,7 +71,6 @@
         const depositBtn = document.getElementById("addDeposit");
         depositBtn.addEventListener("click", function(){
             const depositNumber = getInputNumber("depositAmount");
-            
             updateSpanText("currentDeposit", depositNumber);
             updateSpanText("currentBalance", depositNumber);
             document.getElementById("depositAmount").value = "";
@@ -81,20 +80,22 @@
         const withdrawBtn = document.getElementById("addWithdraw");
         withdrawBtn.addEventListener("click", function(){
             const withdrawNumber = getInputNumber("withdrawAmount");
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1 * withdrawNumber);
+            document.getElementById("withdrawAmount").value = "";
         })
 
+        //Function Here
         function getInputNumber(id){
             const amount = document.getElementById(id).value;
             const amountNumber = parseFloat(amount);
             return amountNumber;
         }
 
-
-
-        function updateSpanText(id, depositNumber){
+        function updateSpanText(id, addedNumber){
             const current = document.getElementById(id).innerText;
             const currentNumber = parseFloat(current);
-            const totalAmount = depositNumber + currentNumber;
+            const totalAmount = addedNumber + currentNumber;
             document.getElementById(id).innerText = totalAmount;
         }
     </script>  
